--- a/Software2-notifications-events-ms.csproj
+++ b/Software2-notifications-events-ms.csproj
@@ -6,9 +6,10 @@
     <RootNamespace>Software2_notifications_events_ms</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.8"/>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
-    <PackageReference Include="SendGrid" Version="9.29.3"/>
-    <PackageReference Include="DotNetEnv" Version="3.1.1"/>
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.8" />
+    <PackageReference Include="QRCoder" Version="1.6.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="SendGrid" Version="9.29.3" />
+    <PackageReference Include="DotNetEnv" Version="3.1.1" />
   </ItemGroup>
 </Project>
